<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_songs">

    <fragment
        android:id="@+id/navigation_songs"
        android:name="com.pseddev.singventory.ui.songs.SongsFragment"
        android:label="@string/title_songs" >
        <action
            android:id="@+id/action_songs_to_addSong"
            app:destination="@id/addSongFragment" />
    </fragment>

    <fragment
        android:id="@+id/addSongFragment"
        android:name="com.pseddev.singventory.ui.songs.AddSongFragment"
        android:label="Add Song" />

    <fragment
        android:id="@+id/navigation_venues"
        android:name="com.pseddev.singventory.ui.venues.VenuesFragment"
        android:label="@string/title_venues" >
        <action
            android:id="@+id/action_venues_to_addVenue"
            app:destination="@id/addVenueFragment" />
    </fragment>

    <fragment
        android:id="@+id/addVenueFragment"
        android:name="com.pseddev.singventory.ui.venues.AddVenueFragment"
        android:label="Add Venue" />

    <fragment
        android:id="@+id/navigation_visits"
        android:name="com.pseddev.singventory.ui.visits.VisitsFragment"
        android:label="@string/title_visits" >
        <action
            android:id="@+id/action_visits_to_startVisit"
            app:destination="@id/startVisitFragment" />
        <action
            android:id="@+id/action_visits_to_activeVisit"
            app:destination="@id/activeVisitFragment" />
    </fragment>

    <fragment
        android:id="@+id/startVisitFragment"
        android:name="com.pseddev.singventory.ui.visits.StartVisitFragment"
        android:label="Start Visit" >
        <action
            android:id="@+id/action_startVisit_to_activeVisit"
            app:destination="@id/activeVisitFragment" />
    </fragment>

    <fragment
        android:id="@+id/activeVisitFragment"
        android:name="com.pseddev.singventory.ui.visits.ActiveVisitFragment"
        android:label="Active Visit" >
        <argument
            android:name="visitId"
            app:argType="long" />
    </fragment>

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.pseddev.singventory.ui.settings.SettingsFragment"
        android:label="@string/title_settings" />

</navigation>